fix: WorkerInstanceService can NPE